[gd_scene load_steps=2 format=3 uid="uid://cea3nbd1wcaxy"]

[ext_resource type="Script" uid="uid://de1cvbolnay0j" path="res://Main/main_menu.gd" id="1_fr8op"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fr8op")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BtnSandbox" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Testing Sandbox"

[node name="BtnTestLesson" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Testing Lesson World (Free of road laws)"

[node name="BtnLesson1" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 1"

[node name="BtnLesson2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 2"

[node name="BtnLesson3" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 3"

[node name="BtnLesson4" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 4"

[node name="BtnLesson5" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 5"

[node name="BtnLesson6" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 6"

[node name="BtnLesson7" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 7"

[node name="BtnLesson8" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 8"

[node name="BtnLesson9" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lesson 9"

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
